--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,10 @@
 :root{
-    --branco-principal: #FFFFFF;
+    --branco-principal: #f9f9f9;
     --cinza-secundaria: #c0c0c0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --font-principal: 'Inter';
+    --botao-azul-efeito: #5ea0f0;
 }
 
 *{
@@ -13,16 +15,143 @@
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--font-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .principal{
-    background-image: url("/img/Background.png");
+    background-image: url("/alura_plus/img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center ;
+    text-align: center;
 }
 
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
+.container__titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
 
+.container__botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    text-decoration: none;
+    color: var(--branco-principal);
+    display: block;
+    margin-bottom: 1em;
+}
+.container__botao:hover{
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo)
+}
+
+.botao__secundario{
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
+}
+
+.container__aviso{
+    font-size: 12px;
+    color: var(--cinza-secundaria)
+}
+
+.container__imagem{
+    /*cima , direita, baixo, esquerda*/
+    margin: 1em 0 2em 0;
+}
+
+.container__caixa{
+    /*eixo y, eixo x*/
+    margin: 0 6em;
+}
+
+.secundario__imagem{
+    width: 80%;
+    margin-left: 2em;
+}
+
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundaria);
+}
+
+.secundario__botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao{
+    padding: 2em;
+}
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivos__titulo{
+    font-size: 48px;
+    color: var(--branco-principal)
+}
+
+.dispositivos__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.lista__item{
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape{
+    text-align: center;
+    margin-bottom: 5em;
+}
+.rodape__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    gap: 1em;
+
+}
+.lista__link{
+    text-decoration: none;
+    color: var(--branco-principal);
+}
+.lista__link:hover{
+    color: var(--botao-azul);
+}
+.lista__link:active{
+    color: var(--cor-de-fundo);
+}
+
+.rodape__texto{
+    margin: 2em 10em;
+    font-size: 14xp;
+    color: var(--cinza-secundaria);
+}
+
+.rodape__logo{
+    margin: 2em;
+}
